Converted build to gradle with Android Studio
Remove .gradle from git
Update travis.yml to get build to work on Travis-CI

Add script command

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: android
 
-script: "./build.sh"
+script: "./gradlew build"
 
 android:
 
     components:
-        - build-tools-18.1.1
-        - android-18
+        - build-tools-21.1.1
+        - android-21
         - extra
         - addon-google_apis-google-16
