--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,26 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 'Google Inc.:Google APIs:16'
-    buildToolsVersion "21.1.1"
-
+    buildToolsVersion '21.0.2'
     defaultConfig {
         applicationId "com.crankworks.crankanonymous"
+        minSdkVersion 16
+        targetSdkVersion 21
     }
-
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+    productFlavors {
+    }
+}
+
+dependencies {
+    //compile "com.android.support:appcompat-v7:21.0.+"
 }
