--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.crankworks.crankanonymous"
-      android:versionCode="1"
       android:versionName="1.0">
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_crankworks"
+                 android:allowBackup="true">
 
         <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -16,7 +17,8 @@
 
         <activity android:name="TrackingActivity"
                   android:label="@string/tracking_name"
-                  android:parentActivityName="com.example.myfirstapp.MainActivity">
+                  android:theme="@android:style/Theme.Holo.Light"
+                  android:parentActivityName="com.crankworks.crankanonymous.MainActivity">
                   <meta-data
                       android:name="android.support.PARENT_ACTIVITY"
                       android:value="com.crankworks.crankanonymous.MainActivity" />
