--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.crankworks.crankanonymous"
-      android:versionName="1.0">
+      android:versionCode="0"
+      android:versionName="0.0.0">
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_crankworks"
                  android:allowBackup="true">
