--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
       android:versionCode="0"
       android:versionName="0.0.0">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_crankworks"
                  android:allowBackup="true">
 
