Add tracking service with binding

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,9 @@
                       android:value="com.crankworks.crankanonymous.MainActivity" />
         </activity>
 
+        <service android:name="TrackingService"
+                 android:label="@string/tracking_service_name"
+                 android:icon="@drawable/ic_crankworks" />
+
     </application>
 </manifest>
