--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.crankworks.crankanonymous"
-      android:versionCode="0"
-      android:versionName="0.1.0">
+    package="com.crankworks.crankanonymous"
+    android:versionCode="0"
+    android:versionName="0.1.0" >
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_crankworks"
-                 android:allowBackup="true">
-
-        <activity android:name="MainActivity"
-                  android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Holo.Light">
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_crankworks"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.crankworks.trackingactivity.TrackingActivity"
-                  android:label="@string/tracking_name"
-                  android:theme="@android:style/Theme.Holo.Light"
-                  android:parentActivityName="com.crankworks.crankanonymous.MainActivity">
-                  <meta-data
-                      android:name="android.support.PARENT_ACTIVITY"
-                      android:value="com.crankworks.crankanonymous.MainActivity" />
+        <activity
+            android:name="com.crankworks.trackingactivity.TrackingActivity"
+            android:label="@string/tracking_name"
+            android:parentActivityName=".MainActivity"
+            android:theme="@android:style/Theme.Holo.Light" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.crankworks.crankanonymous.MainActivity" />
         </activity>
 
-        <service android:name="com.crankworks.trackingservice.TrackingService"
-                 android:label="@string/tracking_service_name"
-                 android:icon="@drawable/ic_crankworks" />
+        <service
+            android:name="com.crankworks.trackingservice.TrackingService"
+            android:icon="@drawable/ic_crankworks"
+            android:label="@string/tracking_service_name" />
 
+        <activity
+            android:name=".FinishingActivity"
+            android:label="@string/title_activity_finishing"
+            android:parentActivityName=".MainActivity"
+            android:theme="@android:style/Theme.Holo.Light" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.crankworks.crankanonymous.MainActivity" />
+        </activity>
     </application>
+
 </manifest>
