--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: android
 
-script: "./gradlew build"
+env:
+  global:
+    - TERM=dumb
+  matrix:
+    - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
 
 android:
 
@@ -9,3 +13,12 @@ android:
         - android-21
         - extra
         - addon-google_apis-google-16
+
+before_script:
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
+
+script: "./gradlew connectedAndroidTest build"
+
