--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: android
+sudo: false
+
 
 env:
   global:
@@ -6,13 +8,17 @@ env:
   matrix:
     - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
 
-android:
 
-    components:
-        - build-tools-21.1.1
-        - android-21
-        - extra
-        - addon-google_apis-google-16
+android:
+  components:
+    - build-tools-21.1.1
+    - android-21
+    - extra
+    - addon-google_apis-google-21
+
+
+#    - sys-img-armeabi-v7a-addon-google_apis-google-21
+
 
 before_script:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
@@ -20,5 +26,11 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: "./gradlew build connectedCheck"
 
+#before_script:
+#  - emulator -avd sys-img-armeabi-v7a-addon-google_apis-google-21 -no-skin -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
+
+
+script: "./gradlew build connectedCheck"
