--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
 
         <activity
-            android:name="com.crankworks.trackingactivity.TrackingActivity"
+            android:name=".activities.TrackingActivity"
             android:label="@string/tracking_name"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@android:style/Theme.Holo.Light" >
@@ -42,7 +42,7 @@
         </activity>
 
         <service
-            android:name="com.crankworks.trackingservice.TrackingService"
+            android:name=".trackingservice.TrackingService"
             android:icon="@drawable/ic_crankworks"
             android:label="@string/tracking_service_name" />
 
