--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
 
         <activity
-            android:name=".activities.TrackingActivity"
+            android:name=".activities.OriginalTrackingActivity"
             android:label="@string/tracking_name"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@android:style/Theme.Holo.Light" >
