--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ android {
 
 dependencies {
     //compile "com.android.support:appcompat-v7:21.0.+"
+    compile 'com.google.android.gms:play-services:6.1.71'
 }
