--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,16 @@
         </activity>
 
         <activity
+            android:name=".activities.ViewingActivity"
+            android:label="@string/viewing_name"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@android:style/Theme.Holo.Light" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
+
+        <activity
             android:name=".activities.OriginalTrackingActivity"
             android:label="@string/tracking_name"
             android:parentActivityName=".activities.MainActivity"
