--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    // This line was suppose to disable gradle version checks, but it did not
+    // System.properties['com.android.build.gradle.overrideVersionCheck']='true'
+
     repositories {
         jcenter()
     }
