--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,19 @@ sudo: false
 env:
   global:
     - TERM=dumb
+    - ADB_INSTALL_TIMEOUT=8   # minutes (apparently, defaults to 2)
   matrix:
-    - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET="android-23" ANDROID_ABI="armeabi-v7a"
 
 
 android:
   components:
-    - build-tools-21.1.1
-    - android-21
+    - tools
+    - build-tools-23.0.3
+    - android-23
     - extra
-    - addon-google_apis-google-21
-
-
-#    - sys-img-armeabi-v7a-addon-google_apis-google-21
+    - addon-google_apis-google-23
+    - sys-img-armeabi-v7a-android-23
 
 
 before_script:
@@ -25,12 +25,6 @@ before_script:
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-
-
-#before_script:
-#  - emulator -avd sys-img-armeabi-v7a-addon-google_apis-google-21 -no-skin -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
 
 
 script: "./gradlew build connectedCheck"
